--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -2,10 +2,10 @@ body {
   height: 100%;
   margin: 0px;
   padding: 0px;
+  transition: background-color .5s;
 }
 
 #container { 
-  width: 100%;
   height: 100%;
 }
 
@@ -21,18 +21,69 @@ input[type="text"] {
   width: 30px;
 }
 
-#nav {
-  z-index: 100;
-  position: absolute; 
-  background-color: #fff; 
-  border: 1px #000 Solid;
-  padding: 5px; 
-  height: 100%; 
-  width: 15%; 
-  display: block;
+#main {
+  height: 100%;
+  transition: margin-left .5s;
+}
+
+#mapWrap {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 #map {
   width: 100%;
   height: 100%;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+#over_map {
+  background-color: rgba(0, 0, 0, 0);
+  position: absolute;
+  z-index: 99;
+  top: 0px;
+  left: 0px;
+  opacity: 0;
+  transition: background-color .5s;
+  height: 100%;
+  width: 100%;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
