--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -10,6 +10,23 @@ body {
   width: 100%;
 }
 
+#header {
+  background-color: white;
+  color: #1E3C19;
+  padding: 15px;
+  width: 100%;
+  z-index: 0;
+}
+
+#header span {
+  color: #1E3C19;
+  transition: 0.3s;
+}
+
+#header span:hover {
+  color: #049485;
+}
+
 html {
   height: 100%;
 }
@@ -68,7 +85,8 @@ input[type="text"] {
 }
 
 .sidenav {
-  background-color: #1E3C19;
+  background-color: white;
+  box-shadow: 10px 10px 5px grey;
   height: 100%;
   left: 0;
   overflow-x: hidden;
@@ -81,7 +99,7 @@ input[type="text"] {
 }
 
 .sidenav a {
-  color: #818181;
+  color: #1E3C19;
   display: block;
   font-size: 25px;
   padding: 8px 8px 8px 32px;
@@ -90,7 +108,7 @@ input[type="text"] {
 }
 
 .sidenav a:hover {
-  color: #f1f1f1;
+  color: #049485;
 }
 
 .sidenav .closebtn {
