--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -3,14 +3,12 @@ body {
   margin: 0px;
   padding: 0px;
   transition: background-color 0.5s;
+  color: #1E3C19;
 }
 
 #colon {
   font-size: 24px;
   padding-top: 10%;
-  color: #1E3C19;
-  margin-left: 5px;
-  margin-right: 5px
 }
 
 .fg-mixin {
@@ -22,7 +20,7 @@ html {
   height: 100%;
 }
 
-.label-color {
+.text-color {
   color: #1E3C19;
 }
 
