Add favorite button

--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -74,3 +74,22 @@ html {
   margin-right: 10px;
   margin-left: 10px;
 }
+
+.icon {
+  cursor:pointer;
+  padding:10px 12px 8px;
+  background:#fff;
+  border-radius:50%;
+  display:inline-block;
+  margin:0 0 15px;
+  color:#aaa;
+  transition:.2s;
+}
+
+.icon:hover {
+  color:#666;
+}
+
+.icon.press {
+  color:#e23b3b;
+}
