--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -15,6 +15,11 @@ body {
   padding-top: 10%;
 }
 
+.info-header {
+  color: #049688;
+  text-align: left;
+}
+
 .fg-mixin {
   margin: auto;
   width: 20%
