--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -22,11 +22,13 @@ body {
   background-color: rgba(0, 0, 0, 0);
   height: 100%;
   left: 0;
-  min-width: 5px;
+  margin: 0;
+  max-width: 30%;
+  min-width: 15%;
   overflow: scroll;
+  padding: 0;
   position: absolute;
   top: 0;
-  width: fit-content;
   z-index: 20;
 }
 
@@ -70,8 +72,7 @@ html {
 }
 
 .location-card {
-  margin-bottom: 10px;
-  margin-top: 10px;
+  margin: 10px;
 }
 
 #map {
@@ -92,8 +93,7 @@ html {
   margin: auto;
   position: absolute;
   right: 0;
-  top:0;
-  width: 15%;
+  top: 0;
 }
 
 #search-btn {
