--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -24,7 +24,7 @@ body {
   left: 0;
   margin: 0;
   max-width: 30%;
-  min-width: 15%;
+  min-width: 17%;
   overflow: scroll;
   padding: 5px;
   margin-top: 5px;
@@ -81,6 +81,11 @@ html {
   margin: 10px;
 }
 
+.no-break {
+  margin: 0;
+  padding: 0; 
+}
+
 #map {
   height: 100%;
   width: 100%;
@@ -109,6 +114,24 @@ html {
   margin-right: auto;
   margin-left: auto;
 }
+
+.stars {
+  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
+  font-size: 0;
+  height: 21px;
+  line-height: 0;
+  overflow: hidden;
+  text-indent: -999em;
+  width: 110px; 
+}
+
+.stars-rating {
+    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
+    background-position: 0 100%;
+    float: left;
+    height: 21px;
+    display:block;
+}  
 
 .text-color {
   color: #1E3C19;
