--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -105,7 +105,7 @@ html {
 
 #search-btn-container {
   display: inline-block;
-  margin-top: 0;
+  margin-top: 10px;
   margin-right: auto;
   margin-left: auto;
 }
