Add meta tag for viewport | begin small screen widht bug work

--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -117,3 +117,10 @@ html {
 .text-color {
   color: #1E3C19;
 }
+
+@media screen and (max-width: 398px) {
+  #drawer-toggle {
+    color: #049688;
+    font-size: 0.75em;
+  }
+}
