--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -143,7 +143,17 @@ html {
   }
 
   .card-scroller {
-    max-width: 60%;
+    max-width: 55%;
+    padding: 0;
+  }
+}
+
+/*
+ Give a little more screen space back for screens with width 398-500px
+*/
+@media screen and (max-width: 500px) {
+  .card-scroller {
+    max-width: 45%;
     padding: 0;
   }
 }
