Add margin to search bar

--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -121,7 +121,7 @@ html {
 
 #search-btn-container {
   display: inline-block;
-  margin-top: 0;
+  margin-top: 5px;
   margin-right: auto;
   margin-left: auto;
 }
