--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -114,6 +114,7 @@ h5 {
 }
 
 :not(.bmd-drawer-out).bmd-drawer-in.bmd-drawer-f-l>.bmd-layout-content {
+  background-color: whitesmoke;
   margin-left: 360px;
 }
 
