Change add icon to one with circle around

--- a/where-to-travel/src/main/webapp/style.css
+++ b/where-to-travel/src/main/webapp/style.css
@@ -176,6 +176,11 @@ input:checked + .slider:before {
   margin-left: auto;
 }
 
+.plus {
+  outline: none;
+  margin-left: 12px;  
+}
+
 .selected {
   background-color: #049688;
   color: white;
